# le_solver

./: CMakeLists.txt  algs.c  algs.h  debug.h  error.h  gauss-method.c  gauss-method.h  main.c  matrix.c  matrix.h  relaxation.c  relaxation.h  test_1.txt  test_2.txt  test_3.txt  test_4.txt
tex/: report.tex
